objects/vlocity_ins__OrderItemPriceAdjustment__c.object
<CustomObject>
    <description>DEPRECATED. Use Order Pricing Adjustment.</description>
    <fields>
        <fullName>vlocity_ins__AssetPricingAdjustmentReferenceId__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AssetPricingAdjustmentReferenceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EstimatedEndDate__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EstimatedStartDate__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderId__c</fullName>
        <description>DEPRECATED.</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Item Pricing Adjustments</relationshipLabel>
        <relationshipName>OrderItemPriceAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Item Pricing Adjustments</relationshipLabel>
        <relationshipName>OrderItemPriceAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Order Item Pricing Adjustments</relationshipLabel>
        <relationshipName>OrderItemPriceAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProvisioningStatus__c</fullName>
        <description>DEPRECATED.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ProvisioningStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <description>DEPRECATED.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Item Pricing Adjustment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Item Pricing Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>